--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <aside></aside>
         </div>
         <br>
+        <div id="Results"></div>
         <div id="Scores">
             <aside>
                 <p>Player 1 Score</p>
